--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,11 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+
   display: flex;
+
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -27,12 +13,25 @@
 .App-link {
   color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body,
+html {
+  background-color: #282c34;
+}
+.main {
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.topLeft {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #282c34;
+}
+.topRight {
+  top: 0;
+  right: 12px;
+  width: 100%;
+  height: 100%;
+  background-color: #282c34;
 }
